--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aula</title>
 </head>
-<body onLoad="alert('Olá Mundo')">
+<body>
     
 </body>
 <script>
-    console.log('Olá mundo no console com script interno');
 </script>
 <script src="app.js"></script>
 </html>
